Fixed alignment of task number blocks and task users in Pimpy.

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -414,6 +414,30 @@ p.report-bug{
     width: 150px;
 }
 
+.pimpy-group-head-td {
+    border: none !important;
+    padding: 0 !important;
+}
+
+.pimpy-group-head-td:hover {
+    background: none !important;
+}
+
+.pimpy-user-head-td {
+    border: none !important;
+    padding: 0 !important;
+}
+
+.pimpy-user-head-td:hover {
+    background: none !important;
+}
+
+.pimpy_task {
+    padding-left: 0;
+    padding-right: 0;
+    width: 50px;
+}
+
 .pimpy_task_task {
     max-width: 400px;
     overflow: hidden;
